google/gke/path-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: path-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target:  /
    nginx.org/websocket-services: "streamlit-demo1-svc,streamlit-demo2-svc" # Configuration for open websockets (comma separated services)
spec:
  rules:
       - host: charliwar.mydomain.com # Url where curl it's received (ELB or Domain linked to ELB)
         http:
            paths:
            - path: /demo1
              backend:
                    serviceName: streamlit-demo1-svc # Declared service on streamlit-demo1-svc.yaml
                    servicePort: 80
            - path: /demo2
              backend:
                    serviceName: streamlit-demo2-svc # Declared service on streamlit-demo2-svc.yaml
                    servicePort: 80
